fix: Footer container alignment on ipad

--- a/src/styles/layout/layout-container.css
+++ b/src/styles/layout/layout-container.css
@@ -23,7 +23,7 @@
   padding: 0 !important;
 }
 
-@screen sm {
+@screen lg {
   .container {
     padding: 0 !important;
   }
